--- a/index.html
+++ b/index.html
@@ -16,8 +16,26 @@
         <!--<img id="logo" src="imgs/Laner.png" alt="">-->
         <h3 id ="slogan">SERVING QUALITY DRIVEN BULDERS SINCE 1984</h3>
       </div>
-      <div class="down"><a href="#about"class="fas fa-angle-double-down fa-4x" aria-hidden="true"></a></div>
+      <div class="down"><a href="#top"class="fas fa-angle-double-down fa-4x" aria-hidden="true"></a></div>
     </div>
+
+    <nav id="top" class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+      <a class="navbar-brand" href="#">Laner Electric</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="#">Features</a>
+          <a class="nav-item nav-link" href="#">Pricing</a>
+          <a class="nav-item nav-link disabled" href="#">Place Order</a>
+        </div>
+      </div>
+    </nav>
+
+
+
 
     <!-- About Us/Second Section -->
     <div class="container">
@@ -41,6 +59,12 @@
         </div>
       </div>
     </div>
+
+
+
+
+
+
 
     <!-- Third Page/Section, affils + certs -->
     <div class="scroll2"></div>
