--- a/index.html
+++ b/index.html
@@ -9,17 +9,26 @@
     <title>Laner Electric Supply</title>
   </head>
   <body>
+    <div class="covid">
+      <div class="inner-cv">
+
+        <h4>Due to the current Coronavirus pandemic</h4> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <a href="#" id="x"><h6 style="text-decoration: underline; margin: 5px;">dismiss</h6></a>
+      </div>
+    </div>
     <!-- First Page + Title -->
     <div class="scroll">
       <div class="title">
         <h1 id="laner_electric">Laner Electric</h1>
         <!--<img id="logo" src="imgs/Laner.png" alt="">-->
         <h3 id ="slogan">SERVING QUALITY DRIVEN BULDERS SINCE 1984</h3>
+        <div class="down"><a href="#two"class="fas fa-angle-double-down fa-4x" aria-hidden="true"></a></div>
       </div>
-      <div class="down"><a href="#top"class="fas fa-angle-double-down fa-4x" aria-hidden="true"></a></div>
-    </div>
 
-    <nav id="top" class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    </div>
+    <div id="two">
+    </div>
+    <nav id="top" class="navbar navbar-expand-lg navbar-light sticky-top">
       <a class="navbar-brand" href="#">Laner Electric</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -137,5 +146,6 @@
     <script src="https://kit.fontawesome.com/422646b9f5.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="scripts/main.js"type="text/javascript"></script>
   </body>
 </html>
