--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- First Page + Title -->
     <div class="scroll">
       <div class="title">
-        <h1 id="laner_electric">Laner Electric</h1>
+        <h1 id="laner_electric">Laner Electric Supply</h1>
         <!--<img id="logo" src="imgs/Laner.png" alt="">-->
         <h3 id ="slogan">SERVING QUALITY DRIVEN BULDERS SINCE 1984</h3>
         <div class="down"><a href="#two"class="fas fa-angle-double-down fa-4x" aria-hidden="true"></a></div>
@@ -28,16 +28,19 @@
     <div id="two">
     </div>
     <nav id="top" class="navbar navbar-expand-lg navbar-light sticky-top">
-      <a class="navbar-brand" href="#">Laner Electric</a>
+      <a class="navbar-brand" href="#"><h6>Laner Electric Supply</h6></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="#">Features</a>
-          <a class="nav-item nav-link" href="#">Pricing</a>
-          <a class="nav-item nav-link disabled" href="#">Place Order</a>
+          <a class="nav-item nav-link" href="#">About</a>
+          <a class="nav-item nav-link" href="#">Contact</a>
+          <a class="nav-item nav-link place" href="#pl">Place Order</a>
+          <a class="nav-item nav-link" href="#">Download</a>
+          <a class="nav-item nav-link" href="#">More</a>
+          <a class="nav-item nav-link">Call/Text (510) 215-5100</a>
         </div>
       </div>
     </nav>
@@ -46,11 +49,52 @@
 
 
     <!-- About Us/Second Section -->
+
+    <div class="order">
+      <div class="order-inner">
+        <h6><a href="#pl"id="x">x</a></h6><h2>Order</h2>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 col-centered">
+              <form class="" action="index.html" method="post">
+                <input type="text" name="" value="" placeholder="Email">
+                <input type="text" name="" value="" placeholder="Company">
+                <input type="text" name="" value="" placeholder="Name">
+                <br>
+                <a href="#pl"onclick="addField()">Add a Field</a>
+                <br>
+            </div>
+              <div class="col-md-6 col-centered">
+                <input type="radio" name="guest" value="">
+                <label for="guest">Guest</label>
+                <input type="radio" name="On Account" value="">
+                <label for="guest">On Account</label><br>
+                <button type="submit" name="button">Submit</button>
+              </form>
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
     <div class="container">
       <div class="row">
         <div id="about" class="col-md-6 col-centered">
-          <h1>About Us</h1><br>
-          "Established in 1984, Laner Electric Supply Co., Inc. is a wholesale distributor of electrical construction materials, lighting products and tools to electrical and general contractors, property developers and managers, and industrial, institutional, and government entities - operating from a 16,000 sq. ft. sales, administrative, and warehouse facility.."
+          <strong>Established in 1984</strong>, Laner Electric Supply Co., Inc. is a wholesale distributor of electrical construction materials, lighting products and tools to electrical and general contractors, property developers and managers, and industrial, institutional, and government entities - operating from a 16,000 sq. ft. sales, administrative, and warehouse facility..
+          <br>
+          <br>
+          <br>
+
+          <div class="order-form">
+            <form class="" action="#" method="post">
+              <input type="button" class="btn"name="ord" value="PLACE AN ORDER">
+
+            </form>
+
+          </div>
+
         </div>
         <div class="col-md-6 col-centered">
           <div class="login">
@@ -74,12 +118,16 @@
 
 
 
+
+
+
+
     <!-- Third Page/Section, affils + certs -->
     <div class="scroll2"></div>
     <div class="jumbotron bg-white jumbotron-fluid">
       <div class="container">
         <h1 class="display-4"></h1>
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div id="carouselExampleControls" class="carousel slide" data-interval="3000"data-ride="carousel">
           <div class="carousel-inner" style=" width:100%; height: 200px !important;">
             <div class="carousel-item active">
               <div class="d-block w-100">
@@ -102,11 +150,11 @@
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="carousel-control-prev-icon" aria-hidden="true" style="background-color: black; !important"></span>
             <span class="sr-only">Previous</span>
           </a>
           <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="carousel-control-next-icon" aria-hidden="true" style="background-color: black; !important"></span>
             <span class="sr-only">Next</span>
           </a>
         </div>
@@ -118,11 +166,13 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-centered text-center">
+          <h1>Visit Us</h1>
+          1310 S 51st St Richmond, CA, 94804<br>Hours: Mon-Fri, 7am-4:30pm
           <div id="map"></div>
+
           <script src="scripts/le.js"></script>
           <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDL-HnlX1k6An84367U8lV8emmtgDqDv0s&callback=initMap">
           </script>
-          510-215-5100<br>1310 S 51st St Richmond, CA, 94804<br>Hours: Mon-Fri, 7am-4:30pm
         </div>
         <div class="col-lg-6 col-centered">
           <div class="login">
@@ -141,7 +191,11 @@
 
 
 
-    <footer></footer>
+    <footer>
+      <a href="#">Linkedin</a>
+      <a href="#">Subscribe</a>
+      <a href="#">RSS</a>
+    </footer>
     <script src="https://kit.fontawesome.com/422646b9f5.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
