--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <nav id="top" class="navbar navbar-expand-lg navbar-light sticky-top">
       <a href="#"class="navbar-left"><img src="imgs/Laner.png " id=logo1 alt=""> </a>
-      <a class="navbar-brand" href="#"> <h5>Laner Electric Supply</h5></a>
+      <a class="navbar-brand" href="#"> <h4>Laner Electric Supply</h4></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -38,8 +38,32 @@
           <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link" href="#">About</a>
           <a class="nav-item nav-link" href="#">Contact</a>
-          <a class="nav-item nav-link" href="#">Download</a>
-          <a class="nav-item nav-link" href="#">More</a>
+
+          <!-- NAV DROPDOWN -->
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Download
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item disabled" href="#">Capabilities</a>
+              <a class="dropdown-item disabled" href="#">Credit Card Auth Form</a>
+              <a class="dropdown-item disabled" href="#">Credit Application</a>
+              <a class="dropdown-item disabled" href="#">Line Card</a>
+            </div>
+          </li>
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              More
+            </a>
+            <div class="dropdown-menu disabled" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item disabled" href="#">Corporate Social Responsibility</a>
+              <a class="dropdown-item disabled" href="#">Projects & Customers</a>
+              <a class="dropdown-item disabled" href="#">News + Media</a>
+
+            </div>
+          </li>
+          <!-- END NAV DROPDOWN -->
 
         </div>
       </div>
