--- a/index.html
+++ b/index.html
@@ -11,14 +11,31 @@
   <body>
     <div class="covid">
       <div class="inner-cv nmob">
-        <h4>Due to the current Coronavirus pandemic</h4> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <h4>Due to the ongoing Corona Virus pandemic,</h4>
+
+        Laner Electric Supply has implemented the following restrictions in accordance with state guidelines.
+        <ul>
+          <li>Masks or face shields are required.</li>
+          <li>Markers have been placed to encourage social distancing.</li>
+          <li>Limited access to showroom with a maximum of three customers at a time. Office visits
+          available with appointment only.</li>
+          <li>Will Call pickup available.</li>
+          <li>Orders can be placed over the phone, via email and by texting our landline (510) 215-5100</li>
+          <li>Modified Hours of Operation:</li>
+          <ul>
+            <li>Monday thru Friday: 7AM-3PM</li>
+          </ul>
+        </ul>
+        We thank you for your cooperation and understanding during these uncertain times.
+
+
         <a href="#" class="x"><h6 style="text-decoration: underline; margin: 5px;">dismiss</h6></a>
       </div>
     </div>
     <!-- First Page + Title -->
-    <div class="scroll">
+    <div class="scroll blur">
       <div class="title">
-        <a href="#"class="navbar-left"><img src="imgs/Laner.png" id=logo0 alt=""height=150px> </a>
+        <a href="#"class="navbar-left"><img src="imgs/Laner.png" id=logo0 alt=""height=175px> </a>
         <h1 id="laner_electric">Laner Electric Supply</h1>
         <!--<img id="logo" src="imgs/Laner.png" alt="">-->
         <h3 id ="slogan">SERVING QUALITY DRIVEN BULDERS SINCE 1984</h3>
@@ -36,9 +53,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="#">About</a>
-          <a class="nav-item nav-link" href="#">Contact</a>
+          <a class="nav-item nav-link active" href="#two">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="#about">About</a>
+          <a class="nav-item nav-link" href="#">Products</a>
 
           <!-- NAV DROPDOWN -->
           <li class="nav-item dropdown">
@@ -76,12 +93,14 @@
 
     <!-- About Us/Second Section -->
 
+
+
     <div class="order">
       <div class="order-inner">
         <h6><a href="#pl"id="x">x</a></h6><h2>Order</h2>
         <div class="container">
           <div class="row">
-            <div class="col-md-6 col-centered">
+            <div class="col-md-6">
               <form class="" action="index.html" method="post">
                 <input type="text" name="" value="" placeholder="Email">
                 <input type="text" name="" value="" placeholder="Company">
@@ -90,7 +109,7 @@
                 <a href="#pl"onclick="addField()">Add a Field</a>
                 <br>
             </div>
-              <div class="col-md-6 col-centered">
+              <div class="col-md-6 ">
                 <input type="radio" name="guest" value="">
                 <label for="guest">Guest</label>
                 <input type="radio" name="On Account" value="">
@@ -107,7 +126,7 @@
 
     <div class="container sec1">
       <div class="row">
-        <div id="about" class="col-md-6 col-centered">
+        <div class="col-md-6 col-centered">
           <h3>Established in 1984,</h3>
           Laner Electric Supply Co., Inc. is a wholesale distributor of electrical construction materials, lighting products and tools to electrical and general contractors, property developers and managers, and industrial, institutional, and government entities - operating from a 16,000 sq. ft. sales, administrative, and warehouse facility..
           <br>
@@ -148,6 +167,31 @@
 
     <!-- Third Page/Section, affils + certs -->
     <div class="scroll2"></div>
+    <div class="about-us"id="about">
+      <h1>ABOUT US</h1>
+    </div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-3 ic">
+          <i class="fa fa-building-o fa-4x" aria-hidden="true"></i>
+          <li>Full-line stocking distributor of products across multiple categories including: conduit, fittings, panels, breakers, transformers, wire and cable, luminaires, lighting control systems, safety switches, motor controls and life safety devices. </li>
+        </div>
+        <div class="col-md-3 ic">
+          <i class="fa fa-users fa-4x" aria-hidden="true"></i>
+          <li>Long-term inside and outside sales and product specialists with specialized domain expertise in lighting, title 24 energy management, switchgear and power distribution. </li>
+        </div>
+        <div class="col-md-3 ic">
+          <i class="fa fa-desktop fa-4x" aria-hidden="true"></i>
+          <li>Experienced personnel with modern computerized tools and best practices to manage project material and information flow from quote, to submittals, to order processing, to logistics, warehouse staging, delivery and invoicing. </li>
+        </div>
+        <div class="col-md-3 ic">
+          <i class="fa fa-handshake-o fa-4x" aria-hidden="true"></i>
+          <li>Long-term trading relationships with top-tier manufacturers providing shared access to specialized project design and engineering personnel and other critical resources. </li>
+        </div>
+
+      </div>
+
+    </div>
     <div class="jumbotron bg-white jumbotron-fluid">
       <div class="container">
         <h1 class="display-4"></h1>
@@ -165,12 +209,10 @@
               <div class="d-block w-100">
                 <h3>Certifications</h3><br>
                 <a href="https://www.sba.gov/"><img class='car'src="imgs/SBA 8A.jpg" width="100h3px"></a>
-                <a href="https://caleprocure.ca.gov/pages/sbdvbe-index.aspx"><img class='car'src="imgs/SBE LOGO.jpg" width="100h3px"></a>
                 <a href="https://www.nglcc.org/"><img class='car'src="imgs/NGLCC.png" height="100h3px"></a>
+                <a href="https://caleprocure.ca.gov/pages/sbdvbe-index.aspx"><img class='car'src="imgs/SBE LOGO.jpg" width="100h3px"></a>
+
               </div>
-            </div>
-            <div class="carousel-item">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -190,36 +232,40 @@
 
 
     <div class="container-fluid Subscribe">
-      <div class="row">
-        <div class="col-md-12 col-centered text-center">
-          <form class="news" action="index.html" method="post">
-            <input type="text" name="" value="">
-            <input type="text" name="" value="">
-          </form>
-          <h1>Subscribe to our newsletter!</h1>
-        </div>
+      <div class="row justify-content-center">
+        <div class="col-md-4 text-center">
+          <div class="sub-inner">
+            <i class="fa fa-envelope fa-4x" aria-hidden="true"></i>
+            <h1>Subscribe to our newsletter!</h1>
+            <form class="news" action="index.html" method="post">
+              <input type="text" name="" value=""placeholder="Name">
+              <input type="email" name="" value=""placeholder="E-mail">
+              <input type="button" name="" class="btn" value="Sign me up!">
+            </form>
+          </div>
 
-      </div>
-    </div>
+        </div>
+        </div>
+        </div>
 
 
     <div class="end">
 
 
     <div class="container-fluid">
-      <div class="row  end-area">
+      <div class="row end-area">
 
-        <div class="col-lg-3 col-centered text-left bottom">
-          <h1>laner electric supply</h1>
+        <div class="col-xl-3 text-center bottom">
+          <img src="imgs/laner.png" style="height:200px;"alt="">
+          <br>
+          <br>
           <a href="#" class="fa fa-linkedin fa-2x" aria-hidden="true"></a>
-
           <a href="#" class="fa fa-yelp fa-2x" aria-hidden="true"></a>
           <a href="#" class="fa fa-rss fa-2x" aria-hidden="true"></a>
           <br>
-          <a href="#" class="fa"><h5>Subscribe</h5></a>
         </div>
 
-        <div class="col-lg-3 col-centered bottom">
+        <div class="col-xl-3  bottom">
           <div class="login">
             <h1 id="ext">Contact Us</h1>
             <form class="" action="#" method="post">
@@ -231,7 +277,7 @@
           </div>
         </div>
 
-        <div class="col-lg-3 col-centered text-left bottom">
+        <div class="col-xl-3 bottom">
 
           <div id="map"></div>
 
@@ -240,7 +286,7 @@
           </script>
         </div>
 
-        <div class="col-lg-3 col-centered bottom text-left">
+        <div class="col-xl-3 bottom ">
 
           <h1>Visit Us</h1>
           1310 S 51st St Richmond, CA, 94804<br>Hours: Mon-Fri, 7am-4:30pm
